--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/model-viewer": "^4.1.0",
+    "@splinetool/react-spline": "^4.1.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
     "firebase": "^12.2.1",
