--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -13,6 +13,8 @@
     "@dicebear/core": "^9.2.4",
     "@dicebear/lorelei": "^9.2.4",
     "@google/model-viewer": "^4.1.0",
+    "@react-three/drei": "^10.7.4",
+    "@react-three/fiber": "^9.3.0",
     "@splinetool/react-spline": "^4.1.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
@@ -22,7 +24,8 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "three": "^0.179.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
