--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -18,14 +18,16 @@
     "@splinetool/react-spline": "^4.1.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "country-state-city": "^3.2.1",
     "firebase": "^12.2.1",
+    "framer-motion": "^12.23.12",
+    "ldrs": "^1.1.7",
     "locomotive-scroll": "^5.0.0-beta.21",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.8.2",
-    "three": "^0.179.1"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
