--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -18,6 +18,7 @@
     "@splinetool/react-spline": "^4.1.0",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "bootstrap-icons": "^1.13.1",
     "country-state-city": "^3.2.1",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
@@ -28,6 +29,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
+    "styled-components": "^6.1.19",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
