--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -24,12 +24,14 @@
     "framer-motion": "^12.23.12",
     "ldrs": "^1.1.7",
     "locomotive-scroll": "^5.0.0-beta.21",
+    "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.2",
     "styled-components": "^6.1.19",
+    "swapy": "^1.0.5",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
