--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -22,6 +22,7 @@
     "country-state-city": "^3.2.1",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
+    "gsap": "^3.13.0",
     "ldrs": "^1.1.7",
     "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.544.0",
