--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -26,6 +26,7 @@
     "ldrs": "^1.1.7",
     "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.544.0",
+    "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
