--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -31,7 +31,10 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.8.2",
+    "react-syntax-highlighter": "^16.1.0",
+    "recharts": "^3.4.1",
     "styled-components": "^6.1.19",
     "swapy": "^1.0.5",
     "swiper": "^11.2.10"
