--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -35,6 +35,7 @@
     "react-router-dom": "^7.8.2",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.4.1",
+    "remark-gfm": "^4.0.1",
     "styled-components": "^6.1.19",
     "swapy": "^1.0.5",
     "swiper": "^11.2.10"
