--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -19,6 +19,7 @@
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.1",
     "country-state-city": "^3.2.1",
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
@@ -29,6 +30,7 @@
     "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-bootstrap": "^2.10.10",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.1",
     "react-ga4": "^2.1.0",
     "react-icons": "^5.5.0",
