--- a/bscompanion/package.json
+++ b/bscompanion/package.json
@@ -24,6 +24,8 @@
     "firebase": "^12.2.1",
     "framer-motion": "^12.23.12",
     "gsap": "^3.13.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.4",
     "ldrs": "^1.1.7",
     "locomotive-scroll": "^5.0.0-beta.21",
     "lucide-react": "^0.544.0",
