--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
-    "nodemailer": "^7.0.11"
+    "nodemailer": "^7.0.11",
+    "resend": "^6.5.2"
   }
 }
